css: fix p tag too big

--- a/assets/style.css
+++ b/assets/style.css
@@ -14,7 +14,7 @@
     --secondary-color: #444;
     --link-color: #479;
 
-    --main-font: 'iA Writer Mono', sans-serif;
+    --main-font: 'iA Writer Mono', monospace;
     --mono-font: 'JetBrains Mono', monospace;
 
     ::selection {
@@ -66,7 +66,6 @@ footer a:hover {
 }
 
 p {
-    font-size: 18px;
     line-height: 1.6;
 }
 
